# cmri

./: Cargo.toml  README.md  avr-atmega328p.json  install.sh  ip_to_485.service  uninstall.sh
.github/workflows/: build.yml
benches/: parse_cmri.rs
examples/: cmridump.rs  node.rs  pi_proxy.rs  scan.rs
examples/arduino_node/: Cargo.toml  README.md
examples/arduino_node/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cmristatemachine_process.rs
src/: arduino.rs  cmri_socket.rs  error.rs  lib.rs  main.rs  node_types.rs  parser.rs
