[package]
name = "cmri"
version = "0.2.0"
authors = ["David Young"]
edition = "2018"
description = "Implementation of C/MRI"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sciguy16/cmri"
keywords = ["CMRI", "Railway", "Railroad", "RS485"]
categories = ["embedded", "no-std", "science::robotics"]

[lib]
name = "cmri"
path = "src/lib.rs"


[features]
default = ["std"]
std = []
arduino = ["ruduino"]

[dependencies]
ruduino = { version = "0.2", optional = true }

[dev-dependencies]
crossbeam-channel = "0.5"
rppal = "0.11"
hex = "0.4"
# used for unit tests in arduino
rand = "0.8"
